logs/rusclasp.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rusclasp'...
Listing './lib/python3.5/site-packages/rusclasp/data'...
Compiling './lib/python3.5/site-packages/rusclasp/dummy_ann.py'...
***   File "./lib/python3.5/site-packages/rusclasp/dummy_ann.py", line 22
    print t2 - t1
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rusclasp/evaluation.py'...
***   File "./lib/python3.5/site-packages/rusclasp/evaluation.py", line 36
    print u'Precision: ', new_pair_corpora.precision
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rusclasp/pos_annotation.py'...
***   File "./lib/python3.5/site-packages/rusclasp/pos_annotation.py", line 25
    print t2 - t1
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rusclasp/split.py'...
***   File "./lib/python3.5/site-packages/rusclasp/split.py", line 82
    print t2 - t1
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rusclasp/splitter.py'...
***   File "./lib/python3.5/site-packages/rusclasp/splitter.py", line 1177
    print inner_token.content
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rusclasp/stupid_splitter.py'...
***   File "./lib/python3.5/site-packages/rusclasp/stupid_splitter.py", line 31
    print spans
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/rusclasp-0.2.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/treetaggerwrapper-2.2.4.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
